# pdfparser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pylock.toml  pyproject.toml  requirements.txt
deploy/p100/: README.md  requirements.txt  shim.py
deploy/vllm/: Containerfile  README.md  run-server.sh  smoke-test.sh
docs/: conf.py  design.rst  embedding.rst  index.rst
src/pdfparser/: __init__.py  __main__.py  _html.py  _tei.py  document.py  falcon.py  grobid.py  tables.py
src/pdfparser/pipeline/: __init__.py  affiliations.py  assemble.py  classify.py  dehyphenate.py  doi.py  errors.py  figures.py  furniture.py  latex.py  layers.py  markdown.py  merge.py  model.py  reconcile.py  recover_figures.py  render.py  tables.py  text.py
src/pdfparser/pipeline/tables/: __init__.py  enrich.py  localize.py  markup.py  rebuild.py  recover.py
tests/: conftest.py  helpers.py  test_classify.py  test_document.py  test_doi.py  test_dump_replay.py  test_errors.py  test_falcon.py  test_figures.py  test_html.py  test_integration.py  test_latex_markdown.py  test_layers.py  test_merge.py  test_pdfparser.py  test_pipeline.py  test_reconcile.py  test_render.py  test_seam.py  test_tables.py
tests/data/dumps/: 30592559_raw_markdown.md  31051047_raw_markdown.md  31123167_raw_markdown.md  31298526_raw_markdown.md  32117944_raw_markdown.md  32639976_raw_markdown.md
